@@ -1,3 +1,8 @@
+2017-11-18  Thomas Koenig  <tkoenig@gcc.gnu.org>
+
+	PR fortran/83012
+	* gfortran.dg/contiguous_5.f90: New test.
+
 2017-11-17  Steve Ellcey  <sellcey@cavium.com>
 
 	* gcc.target/aarch64/fmls.c: New test.
